Fixed overlowing title underline on mobile

--- a/css/custom.css
+++ b/css/custom.css
@@ -145,7 +145,7 @@ p{
     margin-bottom: 20px;
     padding-bottom: 20px;
     display: block;
-    width: 400px;
+    width: 70%;
     margin: 0 auto;
   }
 
